css push on date 30

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <div class="container">
     <div class="heading">
         <h2>What We Do</h2>
-        <h3>Plug‑and‑play newsroom services and available content formats — articles, reels, videos</h3>
+        <h3>Content That Makes Investors Listen</h3>
     </div>
     <div class="whatbox">
         <p>FinBean Media helps brokers, fintechs, and wealth platforms become trusted voices in the
@@ -128,7 +128,14 @@
 <section class="teamWrap" id="team">
   <div class="container">
     <div class="lftbx">
-      <div class="heading">
+      <div class="cardbx">
+          <img src="images/suyash.png" alt="" height="100%" width="100%">
+          <h3>Suyash Maheshwari</h3>
+          <h4>Founder</h4>
+        </div>
+    </div>
+    <div class="rgtbx">
+        <div class="heading">
         <h2>Meet the Team</h2>
       </div>
       <div class="teamDetail">
@@ -138,16 +145,8 @@
         investor education initiatives for financial platforms.</p>
         <p>He’s backed by a small, agile team of journalists, digital marketers, video editors, and graphic
         designers — all focused on one goal: helping financial brands become credible, content-led
-        destinations. From simplifying market news to designing thumb-stopping creatives, we
-        function as an extension of your brand, speaking in your voice — not ours.</p>
+        destinations. From simplifying market news to designing thumb-stopping creatives, we function as an extension of your brand, speaking in your voice — not ours.</p>
       </div>
-    </div>
-    <div class="rgtbx">
-        <div class="cardbx">
-          <img src="images/suyash.png" alt="" height="100%" width="100%">
-          <h3>John Borthwick</h3>
-          <h4>Senior product manager</h4>
-        </div>
     </div>
   </div>
 </section>
@@ -162,15 +161,11 @@
         <p>Curious how a newsroom-style content strategy could work for your brand? We’d be happy to explore it with you.</p>
         <div class="socilaIcon">
             <ul>
-              <li><a target="_blank" href="#"><svg>
-                    <use xlink:href="#faceIcon"></use>
-                  </svg></a>
-                </li>
-              <li><a target="_blank" href="#"><svg>
+              <li><a target="_blank" href="https://www.instagram.com/thebean.media?igsh=djFsZnEzMGo4Zm51&utm_source=qr"><svg>
                     <use xlink:href="#instaIcon"></use>
                   </svg></a>
                 </li>
-              <li><a target="_blank" href="#"><svg>
+              <li><a target="_blank" href="https://www.linkedin.com/company/finbean-media"><svg>
                     <use xlink:href="#linkIcon"></use>
                   </svg></a>
                 </li>
@@ -206,6 +201,8 @@
       <figure class="addressWrap">
           <h3>Contact</h3>
           <p>Finbean Media Pvt. Ltd. <br>1107, Antariksh Bhavan,<br>22, Kasturba Gandhi Marg,<br>New Delhi – 110001</p>
+          <span><b>Email:-</b> founder@fin-bean.com</span>
+          <span><b>Phone:-</b> +91 90271 30802</span>
       </figure>
   </div>
 </footer>
@@ -222,99 +219,7 @@
 
 
 
-<!-- <footer class="footer" id="Contactus">
-  <div class="container">
-      <div class="socialbtn">
-        <ul>
-          <li><a target="_blank" href="#"><i class="icons facebook"></i></a></li>
-          <li><a target="_blank" href="#"><i class="icons twitter"></i></a></li>
-          <li><a target="_blank" href="#"><i class="icons insta"></i></a></li>
-          <li><a target="_blank" href="#"><i class="icons youtube"></i></a></li>
-          <li><a target="_blank" href="#"><i class="icons linkdin"></i></a></li>
-        </ul>
-      </div>
-      <div class="foot_links">
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Content Solutions </a></li>
-          <li><a href="#">Leadership & HRD</a></li>
-          <li><a href="#">Healthcare</a></li>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Contact Us</a></li>
-        </ul>
-      </div>
-      <div class="copyright">
-        <p>Copyright © 2023-TLC infinity all rights reserved</p>
-      </div>
-      <div class="contact_details">
-      <div class="contactus">
-          <figure>
-            <h4>CONTACT US ON</h4>  
-            <span>whatsapp</span>
-          </figure>
-          <figure>
-            <h4><a href="https://wa.me/917827843358" target="_blank">+91 7827843358</a></h4>
-            <span>Content Solutions </span>
-          </figure>
-          <figure>
-            <h4><a href="https://wa.me/919811615252" target="_blank">+91 9811615252</a></h4>
-            <span>Leadership & HRD</span>
-          </figure>
-          <figure>
-            <h4><a href="https://wa.me/919324391469" target="_blank">+91 9324391469</a></h4>
-            <span>Healthcare</span>
-          </figure>
-      </div>
-      <div class="contactus_form" >
-        <form name="submit-to-google-sheet">
-          <div class="form-group">
-            <input type="text" name="Name" autocomplete="off" class="form-control" id="name" placeholder="Name*"  required/>
-            <div class="validate"></div>
-          </div>
-          <div class="form-group">
-            <input type="text" class="form-control" name="Email" autocomplete="off" id="email" placeholder="Email* " required />
-            <div class="validate"></div>
-          </div>
-          <div class="form-group">
-            <input type="text" class="form-control" name="Phone" autocomplete="off" id="phone" placeholder="Phone"/>
-            <div class="validate"></div>
-          </div>
-          <div class="form-group">
-            <textarea class="form-control" name="Message" rows="3" autocomplete="off" placeholder="Message"></textarea>
-            <div class="validate"></div>
-          </div>
-          <div class="text-center">
-            <input type="submit" name="Send Message" id="Send" placeholder="Send Message"  required/>
-          </div>
-          <div class="text-center">
-            <span class="thanksmsg" id="msg"></span>
-          </div>
-        </form>
-      </div>
-    </div> 
-      <script>
-        const scriptURL = 'https://script.google.com/macros/s/AKfycbzfO9CSPXMsfotvC7vnzGFKlpcdU8and0u2b1D6f5OwaKdh2sYpRRYdQHJMp7IOJvFj/exec'
-        const form = document.forms['submit-to-google-sheet']
-        const msg = document.getElementById('msg')
-      
-        form.addEventListener('submit', e => {
-          e.preventDefault()
-          alert('Your Message has been sent successfully!');
-          fetch(scriptURL, { method: 'POST', body: new FormData(form)})
-            .then(response => {
-              msg.innerHTML = "Thanks for your message!"
-              setTimeout(function(){
-                msg.innerHTML  = ""
 
-              }, 5000)
-              form.reset()
-
-            })
-            .catch(error => console.error('Error!', error.message))
-        })
-      </script>
-  </div>
-</footer> -->
 <svg xmlns="http://www.w3.org/2000/svg" style="display:none">
     <symbol viewBox="0 0 13 10" id="rgt-arrow">
         <path d="M12.2552 5.58854C12.5807 5.26302 12.5807 4.73438 12.2552 4.40885L8.08852 0.242187C7.763 -0.0833335 7.23435 -0.0833336 6.90883 0.242187C6.58331 0.567708 6.58331 1.09635 6.90883 1.42187L9.65623 4.16667L1.66664 4.16667C1.20571 4.16667 0.83331 4.53906 0.83331 5C0.83331 5.46094 1.20571 5.83333 1.66664 5.83333L9.65362 5.83333L6.91144 8.57813C6.58591 8.90365 6.58591 9.43229 6.91144 9.75781C7.23696 10.0833 7.7656 10.0833 8.09112 9.75781L12.2578 5.59115L12.2552 5.58854Z" fill="#BCA287"/>
@@ -342,7 +247,7 @@
     <symbol viewBox="0 0 21 21" id="instaIcon">
         <path d="M14.8571 0.428467C16.3726 0.428467 17.8261 1.03051 18.8977 2.10214C19.9694 3.17378 20.5714 4.62723 20.5714 6.14275V15.2856C20.5714 16.8011 19.9694 18.2546 18.8977 19.3262C17.8261 20.3979 16.3726 20.9999 14.8571 20.9999H5.71425C4.19873 20.9999 2.74528 20.3979 1.67364 19.3262C0.602009 18.2546 -3.05176e-05 16.8011 -3.05176e-05 15.2856V6.14275C-3.05176e-05 4.62723 0.602009 3.17378 1.67364 2.10214C2.74528 1.03051 4.19873 0.428467 5.71425 0.428467H14.8571ZM10.2857 6.14275C9.07327 6.14275 7.9105 6.62438 7.05319 7.48169C6.19589 8.339 5.71425 9.50176 5.71425 10.7142C5.71425 11.9266 6.19589 13.0894 7.05319 13.9467C7.9105 14.804 9.07327 15.2856 10.2857 15.2856C11.4981 15.2856 12.6609 14.804 13.5182 13.9467C14.3755 13.0894 14.8571 11.9266 14.8571 10.7142C14.8571 9.50176 14.3755 8.339 13.5182 7.48169C12.6609 6.62438 11.4981 6.14275 10.2857 6.14275ZM10.2857 8.42847C10.8919 8.42847 11.4733 8.66928 11.9019 9.09794C12.3306 9.52659 12.5714 10.108 12.5714 10.7142C12.5714 11.3204 12.3306 11.9018 11.9019 12.3304C11.4733 12.7591 10.8919 12.9999 10.2857 12.9999C9.67947 12.9999 9.09809 12.7591 8.66944 12.3304C8.24078 11.9018 7.99997 11.3204 7.99997 10.7142C7.99997 10.108 8.24078 9.52659 8.66944 9.09794C9.09809 8.66928 9.67947 8.42847 10.2857 8.42847ZM15.4285 4.42847C15.1254 4.42847 14.8347 4.54887 14.6204 4.7632C14.4061 4.97753 14.2857 5.26822 14.2857 5.57132C14.2857 5.87443 14.4061 6.16512 14.6204 6.37945C14.8347 6.59377 15.1254 6.71418 15.4285 6.71418C15.7316 6.71418 16.0223 6.59377 16.2367 6.37945C16.451 6.16512 16.5714 5.87443 16.5714 5.57132C16.5714 5.26822 16.451 4.97753 16.2367 4.7632C16.0223 4.54887 15.7316 4.42847 15.4285 4.42847Z" fill="#B98B5A"/>
     </symbol>
-    <symbol viewBox="0 0 21 25" id="linkIcon">
+    <symbol viewBox="0 0 21 21" id="linkIcon">
         <path fill-rule="evenodd" clip-rule="evenodd" d="M20.5714 3.42847C21.4807 3.42847 22.3528 3.78969 22.9958 4.43267C23.6387 5.07565 24 5.94772 24 6.85704V20.5713C24 21.4806 23.6387 22.3527 22.9958 22.9957C22.3528 23.6387 21.4807 23.9999 20.5714 23.9999H6.8571C5.94779 23.9999 5.07572 23.6387 4.43273 22.9957C3.78975 22.3527 3.42853 21.4806 3.42853 20.5713V6.85704C3.42853 5.94772 3.78975 5.07565 4.43273 4.43267C5.07572 3.78969 5.94779 3.42847 6.8571 3.42847H20.5714ZM9.14281 11.4285C8.83971 11.4285 8.54902 11.5489 8.33469 11.7632C8.12036 11.9775 7.99996 12.2682 7.99996 12.5713V18.2856C7.99996 18.5887 8.12036 18.8794 8.33469 19.0937C8.54902 19.3081 8.83971 19.4285 9.14281 19.4285C9.44592 19.4285 9.73661 19.3081 9.95093 19.0937C10.1653 18.8794 10.2857 18.5887 10.2857 18.2856V12.5713C10.2857 12.2682 10.1653 11.9775 9.95093 11.7632C9.73661 11.5489 9.44592 11.4285 9.14281 11.4285ZM12.5714 10.2856C12.2683 10.2856 11.9776 10.406 11.7633 10.6203C11.5489 10.8347 11.4285 11.1254 11.4285 11.4285V18.2856C11.4285 18.5887 11.5489 18.8794 11.7633 19.0937C11.9776 19.3081 12.2683 19.4285 12.5714 19.4285C12.8745 19.4285 13.1652 19.3081 13.3795 19.0937C13.5938 18.8794 13.7142 18.5887 13.7142 18.2856V14.1028C14.0628 13.7096 14.6514 13.2479 15.3062 12.9679C15.6868 12.8056 16.2594 12.7393 16.6571 12.865C16.789 12.8985 16.9065 12.9739 16.992 13.0799C17.0514 13.1599 17.1428 13.3382 17.1428 13.7142V18.2856C17.1428 18.5887 17.2632 18.8794 17.4775 19.0937C17.6919 19.3081 17.9826 19.4285 18.2857 19.4285C18.5888 19.4285 18.8795 19.3081 19.0938 19.0937C19.3081 18.8794 19.4285 18.5887 19.4285 18.2856V13.7142C19.4285 12.9485 19.2342 12.2673 18.8297 11.721C18.4574 11.2257 17.9364 10.8624 17.3428 10.6845C16.312 10.361 15.1702 10.5405 14.408 10.8673C14.1639 10.9723 13.9262 11.0913 13.696 11.2239C13.648 10.9606 13.5092 10.7224 13.3037 10.5509C13.0982 10.3795 12.839 10.2856 12.5714 10.2856ZM9.14281 7.9999C8.83971 7.9999 8.54902 8.1203 8.33469 8.33463C8.12036 8.54896 7.99996 8.83965 7.99996 9.14275C7.99996 9.44586 8.12036 9.73655 8.33469 9.95087C8.54902 10.1652 8.83971 10.2856 9.14281 10.2856C9.44592 10.2856 9.73661 10.1652 9.95093 9.95087C10.1653 9.73655 10.2857 9.44586 10.2857 9.14275C10.2857 8.83965 10.1653 8.54896 9.95093 8.33463C9.73661 8.1203 9.44592 7.9999 9.14281 7.9999Z" fill="#B98B5A"/>
     </symbol>
 </svg>
