--- a/contact.html
+++ b/contact.html
@@ -3,15 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Fin Bean Media</title>
-<meta content="Content Solutions, Leadership & HRD, Healthcare,Skill Development, " name="keywords">
-<meta content="TLC Infinity provides 1. Content Writing & Digital Solutions 2. Leadership Coaching & Skills 3. Healthcare, Wellness & Treatment Consultancy." name="description">
+<title>Fin Bean Media Contact us</title>
+<meta content="" name="keywords">
+<meta content="" name="description">
 <link href="images/favicon.png" rel="icon">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-<link rel='stylesheet' href="css/animate.min.css">
-<link rel='stylesheet' href='css/swiper-bundle.min.css'>
 <link rel="stylesheet" href="css/main.css">
 </head>
 
@@ -55,7 +53,7 @@
             <div class="validate"></div>
           </div>
           <div class="form-group">
-            <input type="text" class="form-control" name="Email" autocomplete="off" id="email" placeholder="Email* " required />
+            <input type="email" class="form-control" name="Email" autocomplete="off" id="email" placeholder="Email* " required />
             <div class="validate"></div>
           </div>
           <div class="form-group">
@@ -77,25 +75,6 @@
       </div>
   </div>
 </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 <svg xmlns="http://www.w3.org/2000/svg" style="display:none">
     <symbol viewBox="0 0 13 10" id="rgt-arrow">
@@ -204,6 +183,19 @@
 	});
 	
 });
+    </script>
+  <script>
+      const scriptURL = 'https://script.google.com/macros/s/AKfycbwgNqRx_vZcWoSxg-cCitoxGrZBgmbdIVMcle2mVcxNSpKt2Ck1GxNHA1K3Zi9JbQ5AmQ/exec';
+      const form = document.forms['submit-to-google-sheet'];
+
+      form.addEventListener('submit', e => {
+        e.preventDefault();
+
+        fetch(scriptURL, { method: 'POST', body: new FormData(form) })
+          .then(response => alert("Thank you! Form is submitted"))
+          .then(() => { window.location.reload(); })
+          .catch(error => console.error('Error!', error.message));
+      });
     </script>
        
       
