--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     </div>
     <div class="rgtbx">
         <div class="heading">
-        <h2>Meet the Team</h2>
+        <h2>Meet the Founder</h2>
       </div>
       <div class="teamDetail">
         <p>FinBean Media is led by Suyash Maheshwari, a financial journalist with over 7 years of
