--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Fin Bean Media Contact us</title>
-<meta content="" name="keywords">
-<meta content="" name="description">
+<meta content="financial content marketing,content for brokers and fintechs,financial industry,investor education content,explainers for stock markets,market commentary services India,financial video production,content strategy for wealth platforms,SEBI-compliant content,digital content for investment firms,stock market explainer videos,FinBean Media,financial brand storytelling,content for investment platforms,market update content India" name="keywords">
+<meta content="FinBean Media is a content marketing studio for the financial industry. We help stock brokers, fintechs, and investment platforms create engaging, compliant content — from blogs and videos to market explainers and reels — that builds trust, visibility, and long-term client engagement. " name="description">
 <link href="images/favicon.png" rel="icon">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
